compiler/e2e/test/snapshot/ir/expression/parenthesized/single_element/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: mismatched types: expected `int32`, found `({number})`
   ╭─ compiler/e2e/test/snapshot/ir/expression/parenthesized/single_element/main.pnx:13:20
   │
13 │         justNumber: (32,),
   │                    ^^^^^^ expected `int32`, found `({number})`
   │
   = ensure the expression type matches the expected type

error: mismatched types: expected `(int32)`, found `{number}`
   ╭─ compiler/e2e/test/snapshot/ir/expression/parenthesized/single_element/main.pnx:14:28
   │
14 │         singleTupleElement: (32),
   │                            ^^^^^ expected `(int32)`, found `{number}`
   │
   = ensure the expression type matches the expected type

error: Compilation aborted due to 2 error(s)



stdout:
